--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
 
       <section id="main_content">
+      <p>Thread about what this is:</p>
         <p><a href="http://archive.rebeccablacktech.com/g/thread/S41780018">http://archive.rebeccablacktech.com/g/thread/S41780018</a></p>
-
+<p>Javascript version:</p>
 <p><a href="http://alteredqualia.com/visualization/evolve/">http://alteredqualia.com/visualization/evolve/</a></p>
 
 <p>C version for GNU/linux:
